src/test/deca/context/invalid/3_ineqBooleans.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 15: ContextualError: NotIntAndNotFloatType
// 
// Historique:
//    cree le 01/01/2022

{
   boolean a = true;
   boolean b = false;

   // Doit etre refuse.
   if (a < b) {
      a = b;
   }
}
